--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" prefix="og: //ogp.me/ns#">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:title" content="Game Snake" />
+    <meta property="og:description" content="Игра Змейка с использование ООП, React, TypeScript" />
+
     <title>Snake game | React, TS, OOP, Vite</title>
   </head>
   <body>
